<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeasureMolarity">

    <com.google.android.material.appbar.MaterialToolbar
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:title="@string/measure_molarity_title"
        app:titleTextColor="@color/primary"
        app:navigationIcon="@drawable/arrow_left"
        app:navigationIconTint="@color/primary"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleCentered="true"
        />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        app:dividerColor="@color/md_theme_divider"
        app:layout_constraintStart_toStartOf="@id/navigation"
        app:layout_constraintTop_toBottomOf="@id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:id="@+id/tip"
        android:background="@drawable/tip_border"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="@id/divider"
        app:layout_constraintEnd_toEndOf="@id/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:paddingVertical="5dp"
        android:paddingHorizontal="8dp">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            app:srcCompat="@drawable/info"
            app:tint="@color/md_theme_primary"/>
        <TextView
            android:textColor="@color/md_theme_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:textSize="13sp"
            android:text="@string/tip_text_molarity"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/tip"
        app:layout_constraintTop_toBottomOf="@id/tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:paddingHorizontal="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/md_theme_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/salt_input_label"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:boxStrokeWidth="0dp"
                android:textColorHint="@color/md_theme_primary"
                app:boxCornerRadiusTopStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusBottomEnd="15dp"
                >

                <AutoCompleteTextView
                    android:id="@+id/salt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_bg"
                    android:hint="@string/salt_hint"
                    android:inputType="text"
                    android:paddingVertical="15dp" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/md_theme_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/solution_type_label"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_bg">
                <Spinner
                    android:id="@+id/solutionType"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/concentrationTitle"
                android:textColor="@color/md_theme_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/concentration_label_molarity"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textSize="15sp"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:hint="@string/concentration_hint_molarity"
                    android:background="@drawable/input_bg"
                    android:id="@+id/concentration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintEnd_toStartOf="@id/concentrationUnit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.7" />
                <Spinner
                    android:id="@+id/concentrationUnit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/concentration"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintWidth_percent="0.3" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/weightTitle"
                android:textColor="@color/md_theme_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/weight_label_molarity"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textSize="15sp"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:hint="@string/weight_hint_molarity"
                    android:background="@drawable/input_bg"
                    android:id="@+id/weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="1" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/md_theme_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/volume_input_label"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textSize="15sp"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:hint="@string/volume_hint"
                    android:background="@drawable/input_bg"
                    android:id="@+id/volume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="1" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <CheckBox
            android:textColor="@color/md_theme_primary"
            android:id="@+id/standardSizes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/standard_sizes_checkbox_text"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calculate"
            android:paddingVertical="15dp"
            android:layout_marginTop="5dp"
            app:cornerRadius="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_text"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>