<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeasureMass"
    android:id="@+id/main">

    <com.google.android.material.appbar.MaterialToolbar
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:title="@string/measure_mass_title"
        app:titleTextColor="@color/primary"
        app:navigationIcon="@drawable/arrow_left"
        app:navigationIconTint="@color/primary"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleCentered="true"
        />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        app:layout_constraintStart_toStartOf="@id/navigation"
        app:layout_constraintTop_toBottomOf="@id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:id="@+id/tip"
        android:background="@drawable/tip_border"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="@id/divider"
        app:layout_constraintEnd_toEndOf="@id/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:paddingVertical="5dp"
        android:paddingHorizontal="8dp">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            app:srcCompat="@drawable/info"
            app:tint="@color/md_theme_primary"/>
        <TextView
            android:textColor="@color/md_theme_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:textSize="13sp"
            android:text="@string/tip_text_mass"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/tip"
        app:layout_constraintTop_toBottomOf="@id/tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:paddingHorizontal="15dp">

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/md_theme_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/concentration_input_label"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textSize="15sp"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:hint="@string/concentration_hint"
                    android:background="@drawable/input_bg"
                    android:id="@+id/concentration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintEnd_toStartOf="@id/concentrationUnit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.7" />
                <Spinner
                    android:id="@+id/concentrationUnit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/concentration"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintWidth_percent="0.3" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/md_theme_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/volume_input_label"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textSize="15sp"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:hint="@string/volume_hint"
                    android:background="@drawable/input_bg"
                    android:id="@+id/volume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="1" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calculate"
            android:paddingVertical="15dp"
            android:layout_marginTop="20dp"
            app:cornerRadius="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_text"/>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>